fix the alignment of the input

--- a/src/kibana/styles/_chosen.less
+++ b/src/kibana/styles/_chosen.less
@@ -46,5 +46,14 @@
     .search-choice {
       background-image: none;
     }
+
+    .search-field {
+      margin-top: 6px;
+      margin-left: 6px;
+
+      input {
+        padding: 0;
+      }
+    }
   }
 }
